--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
   },
   "dependencies": {
     "chart.js": "^4.4.6",
-    "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^20.17.6",
-    "@vitejs/plugin-vue": "^5.1.4",
+    "@types/node": "^20.17.9",
+    "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/eslint-plugin": "1.1.7",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.1.3",
@@ -33,9 +32,10 @@
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
-    "typescript": "~5.6.3",
+    "typescript": "^5.7.2",
     "vite": "^5.4.10",
     "vitest": "^2.1.4",
-    "vue-tsc": "^2.1.10"
+    "vue": "^3.5.13",
+    "vue-tsc": "^1.8.27"
   }
 }
