--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "chart.js": "^4.4.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
@@ -39,4 +40,3 @@
     "vue-tsc": "^2.1.10"
   }
 }
-
