--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.6",
+    "pnpm": "^9.15.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
@@ -39,4 +40,3 @@
     "vue-tsc": "^2.1.10"
   }
 }
-
