--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "vite build",
     "preview": "vite preview",
+    "start": "vite preview", // Hinzugefügt
     "test:unit": "vitest",
-    "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --fix",
     "format": "prettier --write src/"
@@ -16,7 +16,6 @@
   "dependencies": {
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
-    "pnpm": "^9.15.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
@@ -33,7 +32,6 @@
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "jsdom": "^25.0.1",
-    "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
     "typescript": "~5.6.3",
     "vite": "^5.4.10",
