--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "gsap": "^3.12.5",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
